--- a/src/styles/editSupplierForm.module.css
+++ b/src/styles/editSupplierForm.module.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1100;
   }
   
   .formContainer {
@@ -18,6 +18,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 500px;
+    position: relative;
+    z-index: 1101;
   }
   
   .formGroup {
